--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,10 @@ spring.sql.init.schema-locations=classpath*:db/${database}/schema.sql
 spring.sql.init.data-locations=classpath*:db/${database}/data.sql
 
 # Datasource configuration for MySQL
-spring.datasource.url=${MYSQL_URL:jdbc:mysql://mysql-db:3306/petclinic}
+spring.datasource.url=${MYSQL_URL:jdbc:mysql://mysql-service:3306/petclinic}
 spring.datasource.username=${MYSQL_USER:petclinic}
 spring.datasource.password=${MYSQL_PASSWORD:petclinic}
+
 
 # Web
 spring.thymeleaf.mode=HTML
