--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,7 +1,8 @@
 # database init, supports mysql too
 database=mysql
-spring.datasource.url=${MYSQL_URL:jdbc:mysql://mysql-db:3306/petclinic}
+spring.datasource.url=${MYSQL_URL:jdbc:mysql://mysql-service:3306/petclinic}
 spring.datasource.username=${MYSQL_USER:petclinic}
 spring.datasource.password=${MYSQL_PASSWORD:petclinic}
+
 # SQL is written to be idempotent so this is safe
 spring.sql.init.mode=always
