--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -6,3 +6,6 @@ spring.datasource.password=${MYSQL_PASSWORD:petclinic}
 
 # SQL is written to be idempotent so this is safe
 spring.sql.init.mode=always
+
+# Add this line for MySQL Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
