--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.username=${MYSQL_USER:petclinic}
 spring.datasource.password=${MYSQL_PASSWORD:petclinic}
 
 # Add this line for MySQL Dialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Web
 spring.thymeleaf.mode=HTML
@@ -24,10 +24,10 @@ spring.messages.basename=messages/messages
 # Actuator
 management.endpoints.web.exposure.include=*
 
-# Logging
+# Logging - Enable to get more info during debugging
 logging.level.org.springframework=INFO
-# logging.level.org.springframework.web=DEBUG
-# logging.level.org.springframework.context.annotation=TRACE
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
 
 # Maximum time static resources should be cached
 spring.web.resources.cache.cachecontrol.max-age=12h
