--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -4,8 +4,8 @@ spring.datasource.url=${MYSQL_URL:jdbc:mysql://mysql-service:3306/petclinic}
 spring.datasource.username=${MYSQL_USER:petclinic}
 spring.datasource.password=${MYSQL_PASSWORD:petclinic}
 
-# SQL is written to be idempotent so this is safe
+# SQL initialization mode - always initialize the database schema and data
 spring.sql.init.mode=always
 
-# Add this line for MySQL Dialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+# Use MySQL 8 Dialect for Hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
