--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,11 +1,32 @@
-# database init, supports mysql too
+# Database configuration for MySQL
 database=mysql
 spring.datasource.url=${MYSQL_URL:jdbc:mysql://mysql-service:3306/petclinic}
-spring.datasource.username=${MYSQL_USER:petclinic}
-spring.datasource.password=${MYSQL_PASSWORD:petclinic}
+spring.datasource.username=${MYSQL_USER:root}  # Ensure username is set to 'root'
+spring.datasource.password=${MYSQL_PASSWORD:root}  # Ensure password is set to 'root'
 
-# SQL initialization mode - always initialize the database schema and data
-spring.sql.init.mode=always
+# Disable SQL initialization since it's done manually
+spring.sql.init.mode=never
 
 # Use MySQL 8 Dialect for Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Web
+spring.thymeleaf.mode=HTML
+
+# JPA configuration
+spring.jpa.hibernate.ddl-auto=none  # Schema creation is done manually
+spring.jpa.open-in-view=true
+
+# Internationalization
+spring.messages.basename=messages/messages
+
+# Actuator endpoints exposure
+management.endpoints.web.exposure.include=*
+
+# Logging levels for debugging
+logging.level.org.springframework=INFO
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
+
+# Maximum time static resources should be cached
+spring.web.resources.cache.cachecontrol.max-age=12h
