--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-# database init, supports mysql too
+# Database initialization, supports MySQL
 database=mysql
 spring.sql.init.schema-locations=classpath*:db/${database}/schema.sql
 spring.sql.init.data-locations=classpath*:db/${database}/data.sql
 
 # Datasource configuration for MySQL
-spring.datasource.url=${MYSQL_URL:jdbc:mysql://mysql-service:3306/petclinic}
+spring.datasource.url=${MYSQL_URL:jdbc:mysql://mysql-service:3306/petclinic?useSSL=false&allowPublicKeyRetrieval=true}
 spring.datasource.username=${MYSQL_USER:root}
 spring.datasource.password=${MYSQL_ROOT_PASSWORD:root}
 
@@ -14,14 +14,14 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # Web
 spring.thymeleaf.mode=HTML
 
-# JPA
+# JPA Configuration
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=true
 
 # Internationalization
 spring.messages.basename=messages/messages
 
-# Actuator
+# Actuator for monitoring
 management.endpoints.web.exposure.include=*
 
 # Logging - Enable to get more info during debugging
