--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.sql.init.data-locations=classpath*:db/${database}/data.sql
 
 # Datasource configuration for MySQL
 spring.datasource.url=${MYSQL_URL:jdbc:mysql://mysql-service:3306/petclinic?useSSL=false&allowPublicKeyRetrieval=true}
-spring.datasource.username=${MYSQL_USER:root}
-spring.datasource.password=${MYSQL_ROOT_PASSWORD:root}
+spring.datasource.username=${MYSQL_USER}
+spring.datasource.password=${MYSQL_PASSWORD}
 
 # Add this line for MySQL Dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
