--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,8 +1,8 @@
 # Database configuration for MySQL
 database=mysql
 spring.datasource.url=${MYSQL_URL:jdbc:mysql://mysql-service:3306/petclinic?useSSL=false&allowPublicKeyRetrieval=true}  # Updated URL with SSL and key retrieval options
-spring.datasource.username=${MYSQL_USER:root}  # Ensure username is set to 'root'
-spring.datasource.password=${MYSQL_PASSWORD:root}  # Ensure password is set to 'root'
+spring.datasource.username=${MYSQL_USER}
+spring.datasource.password=${MYSQL_PASSWORD}
 
 # Disable SQL initialization since it's done manually
 spring.sql.init.mode=never
