--- a/k8s/petclinic-deployment.yaml
+++ b/k8s/petclinic-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: petclinic
-        image: 54.224.77.33:8085/docker-hosted-repo/petclinic-app:13b79c2-65 # Use the correct version here
+        image: 54.224.77.33:8085/docker-hosted-repo/petclinic-app:13b79c2-65  # Use the correct version here
         ports:
         - containerPort: 8081 
         env:
@@ -39,3 +39,5 @@ spec:
             configMapKeyRef:
               name: app-config
               key: MYSQL_DATABASE
+      imagePullSecrets:
+      - name: nexus-docker-secret  # Use the Nexus Docker secret to pull the image
