--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,9 @@ database=mysql
 spring.sql.init.schema-locations=classpath*:db/${database}/schema.sql
 spring.sql.init.data-locations=classpath*:db/${database}/data.sql
 
+# Ensure SQL initialization is always performed
+spring.sql.init.mode=always  # This ensures that schema and data are always initialized
+
 # Datasource configuration for MySQL
 spring.datasource.url=${MYSQL_URL:jdbc:mysql://mysql-service:3306/petclinic?useSSL=false&allowPublicKeyRetrieval=true}
 spring.datasource.username=${MYSQL_USER}
@@ -15,7 +18,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.thymeleaf.mode=HTML
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=none  # Use 'none' to prevent Hibernate from managing the schema
 spring.jpa.open-in-view=true
 
 # Internationalization
