--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.sql.init.schema-locations=classpath*:db/${database}/schema.sql
 spring.sql.init.data-locations=classpath*:db/${database}/data.sql
 
 # Ensure SQL initialization is always performed
-spring.sql.init.mode=always  # This ensures that schema and data are always initialized
+spring.sql.init.mode=always 
 
 # Datasource configuration for MySQL
 spring.datasource.url=${MYSQL_URL:jdbc:mysql://mysql-service:3306/petclinic?useSSL=false&allowPublicKeyRetrieval=true}
