--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,36 +4,36 @@ spring.sql.init.schema-locations=classpath*:db/${database}/schema.sql
 spring.sql.init.data-locations=classpath*:db/${database}/data.sql
 
 # Ensure SQL initialization is always performed
-spring.sql.init.mode=always 
+spring.sql.init.mode=always
 
 # Datasource configuration for MySQL
 spring.datasource.url=${MYSQL_URL:jdbc:mysql://mysql-service:3306/petclinic?useSSL=false&allowPublicKeyRetrieval=true}
 spring.datasource.username=${MYSQL_USER}
 spring.datasource.password=${MYSQL_PASSWORD}
 
-# Add this line for MySQL Dialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+# MySQL Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# Web
+# Web configuration
 spring.thymeleaf.mode=HTML
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=none  # Use 'none' to prevent Hibernate from managing the schema
+spring.jpa.hibernate.ddl-auto=none 
 spring.jpa.open-in-view=true
 
-# Internationalization
+# Internationalization settings
 spring.messages.basename=messages/messages
 
 # Actuator for monitoring
 management.endpoints.web.exposure.include=*
 
-# Logging - Enable to get more info during debugging
+# Logging settings
 logging.level.org.springframework=INFO
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
 
-# Maximum time static resources should be cached
+# Cache control for static resources
 spring.web.resources.cache.cachecontrol.max-age=12h
 
-# Ensure the application binds to port 8081
+# Server port binding
 server.port=8081
