--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,7 @@ spring.web.resources.cache.cachecontrol.max-age=12h
 
 # Server port binding
 server.port=8081
+
+management.endpoints.web.exposure.include=prometheus
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
