--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,6 +38,7 @@ spring.web.resources.cache.cachecontrol.max-age=12h
 # Server port binding
 server.port=8081
 
-management.endpoints.web.exposure.include=prometheus
+management.endpoints.web.exposure.include=prometheus,health
 management.endpoint.prometheus.enabled=true
 management.metrics.export.prometheus.enabled=true
+
