--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,10 @@
       <artifactId>jakarta.activation-api</artifactId>
       <version>2.0.1</version>
     </dependency>
+    <dependency>
+    <groupId>io.micrometer</groupId>
+    <artifactId>micrometer-registry-prometheus</artifactId>
+  </dependency>
   </dependencies>
 
   <build>
