--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,6 +38,8 @@ spring.web.resources.cache.cachecontrol.max-age=12h
 # Server port binding
 server.port=8081
 
-management.endpoints.web.exposure.include=prometheus,health
-management.endpoint.prometheus.enabled=true
+management.endpoints.web.exposure.include=health,info,prometheus
+management.endpoint.metrics.enabled=true
+management.endpoints.web.exposure.include=*
 management.metrics.export.prometheus.enabled=true
+
