--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,8 +24,10 @@ spring.jpa.open-in-view=true
 # Internationalization settings
 spring.messages.basename=messages/messages
 
-# Actuator for monitoring
-management.endpoints.web.exposure.include=*
+# Actuator for monitoring (Prometheus metrics exposure)
+management.endpoints.web.exposure.include=health,info,prometheus
+management.endpoint.metrics.enabled=true
+management.metrics.export.prometheus.enabled=true
 
 # Logging settings
 logging.level.org.springframework=INFO
@@ -37,9 +39,3 @@ spring.web.resources.cache.cachecontrol.max-age=12h
 
 # Server port binding
 server.port=8081
-
-management.endpoints.web.exposure.include=health,info,prometheus
-management.endpoint.metrics.enabled=true
-management.endpoints.web.exposure.include=*
-management.metrics.export.prometheus.enabled=true
-
