--- a/k8s/petclinic-service.yaml
+++ b/k8s/petclinic-service.yaml
@@ -6,7 +6,9 @@ metadata:
 spec:
   type: LoadBalancer
   ports:
-  - port: 8081  
-    targetPort: 8081  # Match the port in your deployment
+  - port: 8081
+    targetPort: 8081
+    protocol: TCP
+    name: http    # Add this line
   selector:
     app: petclinic
