--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,11 @@
       <groupId>io.micrometer</groupId>
       <artifactId>micrometer-registry-prometheus</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webmvc</artifactId>
+      <version>6.1.13</version> 
+      </dependency>
   </dependencies>
 
   <build>
