--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,23 +3,27 @@ database=mysql
 spring.sql.init.schema-locations=classpath*:db/${database}/schema.sql
 spring.sql.init.data-locations=classpath*:db/${database}/data.sql
 
-# Ensure SQL initialization is always performed
+# Ensure SQL initialization is always performed (change to 'always' only for dev/test environments)
 spring.sql.init.mode=always
 
 # Datasource configuration for MySQL
 spring.datasource.url=${MYSQL_URL:jdbc:mysql://mysql-service:3306/petclinic?useSSL=false&allowPublicKeyRetrieval=true}
-spring.datasource.username=${MYSQL_USER}
-spring.datasource.password=${MYSQL_PASSWORD}
+spring.datasource.username=${MYSQL_USER:petclinic}
+spring.datasource.password=${MYSQL_PASSWORD:petclinic}
 
 # MySQL Dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
+# JPA Configuration
+# Ensure Hibernate handles the schema as per your requirement. Use 'validate', 'update', 'create', or 'create-drop'.
+# 'none' will disable schema management, meaning you will handle schema creation manually.
+spring.jpa.hibernate.ddl-auto=none
+
+# Open JPA sessions during view rendering
+spring.jpa.open-in-view=true
+
 # Web configuration
 spring.thymeleaf.mode=HTML
-
-# JPA Configuration
-spring.jpa.hibernate.ddl-auto=none 
-spring.jpa.open-in-view=true
 
 # Internationalization settings
 spring.messages.basename=messages/messages
