--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # JPA Configuration
 # Ensure Hibernate handles the schema as per your requirement. Use 'validate', 'update', 'create', or 'create-drop'.
-# 'none' will disable schema management, meaning you will handle schema creation manually.
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 
 # Open JPA sessions during view rendering
 spring.jpa.open-in-view=true
