--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-# Database initialization, supports MySQL
+# Database initialization, supports MySQL 
 database=mysql
 spring.sql.init.schema-locations=classpath*:db/${database}/schema.sql
 spring.sql.init.data-locations=classpath*:db/${database}/data.sql
 
-# Ensure SQL initialization is always performed (change to 'always' only for dev/test environments)
+# SQL initialization in test/dev environments
 spring.sql.init.mode=always
 
 # Datasource configuration for MySQL
@@ -15,7 +15,6 @@ spring.datasource.password=${MYSQL_PASSWORD:petclinic}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # JPA Configuration
-# Ensure Hibernate handles the schema as per your requirement. Use 'validate', 'update', 'create', or 'create-drop'.
 spring.jpa.hibernate.ddl-auto=update
 
 # Open JPA sessions during view rendering
@@ -27,18 +26,17 @@ spring.thymeleaf.mode=HTML
 # Internationalization settings
 spring.messages.basename=messages/messages
 
-# Actuator for monitoring (Prometheus metrics exposure)
+# Actuator for Prometheus monitoring
 management.endpoints.web.exposure.include=health,info,prometheus
-management.endpoint.metrics.enabled=true
 management.metrics.export.prometheus.enabled=true
 
-# Logging settings
+# Logging configuration for better debugging
 logging.level.org.springframework=INFO
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
 
-# Cache control for static resources
+# Static resources caching
 spring.web.resources.cache.cachecontrol.max-age=12h
 
-# Server port binding
+# Server port configuration
 server.port=8081
